--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
     id 'application'
 }
 
@@ -23,8 +23,8 @@ applicationDefaultJvmArgs = [
 
 repositories {
     mavenCentral()
-    maven { url = "https://sparse.blue/maven/"}
-//    mavenLocal()
+//    maven { url = "https://sparse.blue/maven/"}
+    mavenLocal()
 }
 
 dependencies {
