--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ applicationDefaultJvmArgs = [
 
 repositories {
     mavenCentral()
-//    maven { url = "https://sparse.blue/maven/"}
-    mavenLocal()
+    maven { url = "https://sparse.blue/maven/"}
+//    mavenLocal()
 }
 
 dependencies {
@@ -46,7 +46,7 @@ dependencies {
     compile "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
     compile "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
 //    compile "org.joml:joml:${jomlVersion}"
-    compile "blue.sparse:sparse-engine:1.0.4"
+    compile "blue.sparse:sparse-engine:1.0.5"
 }
 
 compileKotlin {
