--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,11 @@ applicationDefaultJvmArgs = [
 repositories {
     mavenCentral()
     maven { url = "https://sparse.blue/maven/"}
-//    mavenLocal()
+    mavenLocal()
 }
 
 dependencies {
+    compile "blue.sparse:eutaxy-net:+"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
     compile "org.lwjgl:lwjgl:$lwjglVersion"
@@ -45,6 +46,7 @@ dependencies {
     compile "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
     compile "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
     compile "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
+    compile "org.xerial.snappy:snappy-java:1.1.7.2"
 //    compile "org.joml:joml:${jomlVersion}"
     compile "blue.sparse:sparse-engine:1.0.5"
 }
@@ -59,6 +61,6 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-jar {
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-}
+//jar {
+//    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+//}
